--- a/toolsetup/roles/vault/tasks/main.yml
+++ b/toolsetup/roles/vault/tasks/main.yml
@@ -16,5 +16,5 @@
 - name: Start Vault service
   ansible.builtin.systemd_service:
     name: vault
-    state: started
+    state: restarted
     enabled: yes
